# genai-to-obsidian

./: README.md  main.py  pyproject.toml  requirements.txt
lab/: advanced_enhanced_pubmed.md  agent_with_knowledge.py  knowledge.py  pubmed.py  pubmed_results_20250319_132705.xml  pubmed_results_20250319_133227.xml  test_advanced_search.py  test_enhanced_features.py
lab/pubmed_lab/: agno_agents.md  documentation.md  pubmed.py
utils/: api.py  display.py  key_manager.py  obsidian.py  test_pubmed_tools.py
utils/agno_agent/: advanced_pubmed_agent.py  agent.py  enhanced_pubmed_agent.py
