[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.2.6",
    "google-genai>=1.4.0",
    "openai>=1.70.0",
    "pgvector>=0.4.0",
    "psycopg>=3.2.6",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.40",
]
